# brainunit

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  changelog.md  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
brainunit/: __init__.py  _base.py  _base_test.py  _celsius.py  _celsius_test.py  _misc.py  _unit_common.py  _unit_common_copy.py  _unit_constants.py  _unit_shortcuts.py  _unit_test.py
brainunit/math/: __init__.py  _compat_numpy.py  _compat_numpy_array_creation.py  _compat_numpy_array_manipulation.py  _compat_numpy_funcs_accept_unitless.py  _compat_numpy_funcs_bit_operation.py  _compat_numpy_funcs_change_unit.py  _compat_numpy_funcs_indexing.py  _compat_numpy_funcs_keep_unit.py  _compat_numpy_funcs_logic.py  _compat_numpy_funcs_match_unit.py  _compat_numpy_funcs_remove_unit.py  _compat_numpy_funcs_window.py  _compat_numpy_get_attribute.py  _compat_numpy_linear_algebra.py  _compat_numpy_misc.py  _compat_numpy_test.py  _einops.py  _einops_parsing.py  _einops_parsing_test.py  _einops_test.py  _fun_accept_unitless.py  _fun_accept_unitless_test.py  _fun_array_creation.py  _fun_array_creation_test.py  _fun_change_unit.py  _fun_change_unit_test.py  _fun_change_unit_v2_test.py  _fun_keep_unit.py  _fun_keep_unit_test.py  _fun_remove_unit.py  _fun_remove_unit_test.py  _misc.py  _numpy_accept_unitless.py  _numpy_array_creation.py  _numpy_array_manipulation.py  _numpy_bit_operation.py  _numpy_change_unit.py  _numpy_indexing.py  _numpy_keep_unit.py  (+10 more)
brainunit/visualize/: __init__.py  matplotlib_compat.py  matplotlib_compat_test.py
dev/: units.py  units_template.py
docs/: Makefile  api.rst  auto_generater.py  conf.py  index.rst  mathematical_functions.ipynb  physical_units.ipynb  tutorials.rst
docs/advanced_tutorials/: combining_and_defining.ipynb  mechanism.ipynb
docs/apis/: brainunit.math.array-creation.rst  brainunit.math.change-unit.rst  brainunit.math.einops.rst  brainunit.math.keep-unit.rst  brainunit.math.misc.rst  brainunit.math.remove-unit.rst  brainunit.math.rst  brainunit.math.unitless.rst  brainunit.rst  functional.rst  init.rst  math.rst  metric.rst  optim.rst
docs/mathematical_functions/: array_creation.ipynb  customize_functions.ipynb  elinstein_operation.ipynb  elinstein_operations.ipynb  numpy_functions.ipynb
docs/physical_units/: combining_defining.ipynb  combining_defining_displaying.ipynb  constants.ipynb  conversion.ipynb  math_operations_with_quantity.ipynb  mechanism.ipynb  quantity.ipynb  standard_units.ipynb
docs/tutorials/: mathematical_functions.ipynb  physical_units.ipynb  physical_units.rst
examples/: lif.py
