[build-system]
requires = ["setuptools", "numpy", 'jax', 'jaxlib']
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
exclude = [
    "docs*", "build*", "dist*", "dev*",
    "brainunit.egg-info*", "brainunit/__pycache__*",
    "brainunit/__init__.py"
]


[tool.distutils.bdist_wheel]
universal = true


[project]
name = "brainunit"
description = "Physical Units and Unit-aware Mathematical System in JAX"
readme = 'README.md'
license = { text = 'Apache-2.0 license' }
requires-python = '>=3.9'
authors = [{ name = 'BrainUnit Developers', email = 'chao.brain@qq.com' }]
classifiers = [
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries',
]


keywords = ['physical unit', 'physical quantity', 'brain modeling']

dependencies = [
    'jax',
    'jaxlib',
    'numpy',
]

dynamic = ['version']

[tool.flit.module]
name = "brainunit"

[project.urls]
homepage = 'http://github.com/chaoming0625/brainunit'
repository = 'http://github.com/chaoming0625/brainunit'

[project.optional-dependencies]
testing = [
    'pytest',
]
